2-traffic-management/2-path-header-weight/demo-app-istio-weight-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-virtual-service
spec:
  hosts:
  - "demo-app.cloud"
  gateways:
  - demo-app-istio-gateway
  http:
  - route:
    - destination:
        host: demo-app
        subset: v1
      weight: 90
    - destination:
        host: demo-app
        subset: v2
      weight: 10
